[package]
name = "ai-lab"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.25.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
hyper = { version = "0.14.23", features = ["full"] }
tch = "0.10.1"
npyz = { version = "0.7.3", features = ["npz"] }
futures-util = "0.3.26"