[package]
name = "rpc"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = { version = "0.8.0", default-features = false, features = ["prost", "codegen"] }
prost = "0.11.0"
prost-types = "0.11.1"

[build-dependencies]
tonic-build = { version = "0.8.0", default-features = false, features = ["prost"] }

[features]
server = []
client = []