[package]
name = "sandbox-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.25.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
npyz = { version = "0.7.3", features = ["npz"] }
futures-util = "0.3.26"
async-trait = "0.1.64"
image = "0.24.5"
tonic = "0.9.2"
tonic-reflection = "0.9.2"
tonic-web = "0.9.2"

# master contains significant changes compared to the version from crates.io
# Also, this fork contains the following PR merged:
# https://github.com/durch/rust-s3/pull/343
# to fix locks
rust-s3 = { git = "https://github.com/nikitavbv/rust-s3" }

aws-region = "0.25.1"
config = "0.13.3"
tempfile = "3.3.0"
hostname = "0.3.1"
rand = "0.8.5"
axum = "0.6.9"
axum_tonic = { git = "https://github.com/nikitavbv/axum-tonic" } # tonic is updated to 0.9.2
axum-test-helper = "0.2.0"
http = "0.2.9"
tracing-test = "0.2.4"
img_hash = "3.2.0"
serde_json = "1.0.93"
quantiles = "0.7.1"
prost = "0.11.8"
gcp_auth = "0.7.6"
base64 = "0.21.0"
hyper = "0.14.25"
hyper-tls = "0.5.0"
anyhow = "1.0.71"
serde = "1.0.163"
jsonwebtoken = "8.3.0"
futures = "0.3.28"
reqwest = "0.11.18"
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "postgres", "json"] }
rpc = { path = "../rpc", features = ["server"] }
sandbox-common = { path = "../sandbox-common" }