[package]
name = "sandbox-worker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.25.0", features = ["full"] }
tracing = "0.1.37"
rdkafka = "0.30.0"
serde_json = "1.0.93"
anyhow = "1.0.71"
tch = "0.13.0"
tempfile = "3.5.0"
diffusers = { git = "https://github.com/LaurentMazare/diffusers-rs" } # the version from crates.io uses an old version of tch
rust-s3 = { git = "https://github.com/durch/rust-s3" }
llm = { git = "https://github.com/rustformers/llm" , branch = "main" } # it seems that pre-release version has support for newer architectures
config = "0.13.3"
tonic = { version = "0.9.2", features = ["transport", "tls", "tls-roots"] }
rand = "0.8.5"
sandbox-common = { path = "../sandbox-common" }
rpc = { path = "../rpc", features = ["client"] }