[package]
name = "sandbox-worker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.25.0", features = ["full"] }
tracing = "0.1.37"
rdkafka = "0.30.0"
serde_json = "1.0.93"
anyhow = "1.0.71"
tempfile = "3.5.0"
rust-s3 = { git = "https://github.com/durch/rust-s3" }
config = "0.13.3"
tonic = { version = "0.9.2", features = ["transport", "tls", "tls-roots"] }
rand = "0.8.5"
indicatif = "0.17.6"
sandbox-common = { path = "../sandbox-common" }
candle = { git = "https://github.com/huggingface/candle", package = "candle-core" }
candle-nn = { git = "https://github.com/huggingface/candle" }
candle-transformers = { git = "https://github.com/huggingface/candle" }
tokenizers = "0.13.3"
image = { version = "0.24.7", default-features = false, features = ["png"] }
rpc = { path = "../rpc", features = ["client"] }