[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.25.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
tch = "0.10.1"
npyz = { version = "0.7.3", features = ["npz"] }
futures-util = "0.3.26"
async-trait = "0.1.64"
image = "0.24.5"
tonic = "0.8.1"
tonic-reflection = "0.5.0"
tonic-web = "0.4.0"
rpc = { path = "../rpc", features = ["server"] }