[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.25.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
tch = "0.10.2"
npyz = { version = "0.7.3", features = ["npz"] }
futures-util = "0.3.26"
async-trait = "0.1.64"
image = "0.24.5"
tonic = "0.8.1"
tonic-reflection = "0.5.0"
tonic-web = "0.4.0"
diffusers = { git = "https://github.com/LaurentMazare/diffusers-rs" } # the version from crates.io uses an old version of tch
rust-s3 = { git = "https://github.com/durch/rust-s3" } # master contains significant changes compared to the version from crates.io
aws-region = "0.25.1"
config = "0.13.3"
tempfile = "3.3.0"
rust-bert = "0.20.0"
hostname = "0.3.1"
rand = "0.8.5"
axum = "0.6.9"
axum_tonic = "0.1.0"
rpc = { path = "../rpc", features = ["server"] }