[package]
name = "stable-diffusion-inference"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
axum = "0.7.5"
tracing-subscriber = { version = "0.3.18", features = ["json"] }
tracing = "0.1.40"
candle = { git = "https://github.com/huggingface/candle", package = "candle-core" }
candle-nn = { git = "https://github.com/huggingface/candle" }
candle-transformers = { git = "https://github.com/huggingface/candle" }
tokenizers = "0.13.3"
tempfile = "3.3.0"
