[package]
name = "ui"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
yew-router = { git = "https://github.com/yewstack/yew.git" }
tonic = { version = "0.9.2", default-features=false }
tonic-web-wasm-client = "0.4.0"
tracing = "0.1.37"
console_error_panic_hook = "0.1.7"
wasm-bindgen-futures = "0.4.34"
tracing-wasm = "0.2.1"
web-sys = { version = "0.3.59", features = ["HtmlInputElement"] }
wasm-bindgen = "0.2.82"
base64 = "0.21.0"
urlencoding = "2.1.2"
serde = "1.0.163"
gloo-storage = "0.2.2"
gloo-timers = "0.2.6"
rpc = { path = "../rpc", features = ["client"] }